# python-geoip-api

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  config.yml  database.go  funcs.go  functions.go  geoip_db.go  go.mod  go.sum  goip.go  handlers.go  httphandlers.go  pyproject.toml  settings.go  sonar-project.properties  telegram.py  types.go
pyip/: __init__.py  __main__.py  functions.py  models.py  settings.py
pyip/tests/: test_routes.py
